feat: Add comprehensive Streamlit web UI - Add Streamlit dependency to requirements.txt and pyproject.toml - Create full-featured web interface with script generation, template browser, and documentation - Create UI launch script for easy startup - Update README.md and create comprehensive UI guide - Update roadmap.md to reflect completed UI features

--- a/requirements.txt
+++ b/requirements.txt
@@ -37,9 +37,10 @@ structlog>=23.1.0
 python-dotenv>=1.0.0
 pyyaml>=6.0.1
 
-# CLI
+# CLI & UI
 click>=8.1.0
 rich>=13.5.0
+streamlit>=1.28.0
 
 # Type stubs
 types-requests>=2.31.0
