--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,19 +21,18 @@ classifiers = [
 ]
 
 dependencies = [
-    "pandas>=2.0.0",
-    "numpy>=1.24.0",
     "pydantic>=2.0.0",
     "jsonschema>=4.19.0",
-    "psycopg2-binary>=2.9.0",
-    "sqlalchemy>=2.0.0",
-    "httpx>=0.25.0",
-    "requests>=2.31.0",
+    "jinja2>=3.1.0",
+    "lxml>=4.9.0",
+    "xmltodict>=0.13.0",
+    "openpyxl>=3.1.0",
     "structlog>=23.1.0",
     "python-dotenv>=1.0.0",
     "pyyaml>=6.0.1",
     "click>=8.1.0",
     "rich>=13.5.0",
+    "streamlit>=1.28.0",
 ]
 
 [project.optional-dependencies]
