--- a/.gitignore
+++ b/.gitignore
@@ -222,4 +222,246 @@ models/
 htmlcov/
 
 # Ruff
-.ruff_cache/ 
+.ruff_cache/
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# pipenv
+#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+#   However, in case of collaboration, if having platform-specific dependencies or dependencies
+#   having no cross-platform support, pipenv may install dependencies that don't work, or not
+#   install all needed dependencies.
+#Pipfile.lock
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+__pypackages__/
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Testing and Coverage
+test-results/
+coverage-reports/
+logs/
+*.log
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+
+# Performance and Benchmark Reports
+benchmark.json
+*.benchmark
+.benchmarks/
+
+# Docker
+.dockerignore
+docker-compose.override.yml
+
+# Streamlit
+.streamlit/
+
+# Local configuration
+config/local.yaml
+config/local.yml
+config/.env
+
+# Generated scripts (examples)
+generated/
+output/
+exports/
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+*.temp
+
+# Jupyter notebooks
+*.ipynb
+
+# Documentation builds
+docs/_build/
+docs/site/
+
+# Package files
+*.tar.gz
+*.zip
+*.rar
+
+# Database
+*.db
+*.sqlite
+
+# Logs from applications
+*.log
+*.out
+*.err
+
+# Profiling
+*.prof
+*.profile
+
+# Caches
+.cache/
+*.cache
+
+# Virtual environments (additional patterns)
+pyvenv.cfg
+pip-selfcheck.json
+
+# Local development
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Security
+secrets/
+private/
+*.key
+*.pem
+*.crt
+
+# Build artifacts
+dist/
+build/
+*.whl
+*.egg-info/
+
+# Editor backup files
+*~
+*.bak
+*.orig 
