feat: Implement comprehensive testing framework for Enhanced Graph Database - Added periodic health checks, automated task validation, comprehensive test suite, and master testing coordinator with 5 modes. Task 1 completed (27 functions), system healthy, ready for Task 2.

--- a/.gitignore
+++ b/.gitignore
@@ -204,6 +204,14 @@ temp/
 cache/
 downloads/
 
+# Graph Database - Neo4j Data (AI Assistant Memory)
+graph-data/data/
+graph-data/logs/
+graph-data/plugins/
+# Keep import directory for initial data loading
+!graph-data/import/
+!graph-data/README.md
+
 # Machine Learning
 models/
 *.model
@@ -464,4 +472,4 @@ build/
 # Editor backup files
 *~
 *.bak
-*.orig 
+*.orig
