fix: Add uv cache clean to workflows to resolve zipfile38 dependency caching issue

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,7 @@ jobs:
       run: |
         uv venv
         source .venv/bin/activate
+        uv cache clean
         uv pip install -r requirements.txt
         uv pip install -e ".[dev]"
 
