--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
     - name: Install dependencies
       run: |
         source .venv/bin/activate
+        uv cache clean
         uv pip install -r requirements.txt
         uv pip install -e ".[dev]"
 
