--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ jupyter = [
 ]
 
 [project.scripts]
-ign-scripts = "src.core.cli:main"
+ign-scripts = "src.core.enhanced_cli:main"
 
 [tool.ruff]
 target-version = "py311"
