feat: Complete Task 15 Phase 2 - OPC-UA CLI Implementation & Security - Complete OPC-UA integration with 7 CLI commands, configuration wizard, certificate management, and advanced security. Removed 25+ test scripts and sanitized all sensitive information. Production-ready with read-only safety features.

--- a/.gitignore
+++ b/.gitignore
@@ -473,3 +473,8 @@ build/
 *~
 *.bak
 *.orig
+
+# OPC-UA Testing - Protect sensitive credentials
+scripts/opcua_test_config.env
+opcua_test_config.env
+*.opcua.env
