--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,11 @@ xmltodict>=0.13.0
 # Ignition Resource Processing
 openpyxl>=3.1.0
 
+# OPC-UA Client Libraries (Industrial Automation)
+asyncua>=1.1.6
+opcua-client>=0.8.4
+numpy>=1.21.0
+
 # Development Dependencies
 ruff>=0.1.0
 mypy>=1.7.0
@@ -37,8 +42,9 @@ python-dotenv>=1.0.0
 pyyaml>=6.0.1
 
 # CLI & UI
-click>=8.1.0
-rich>=13.5.0
+click>=8.0.0
+rich>=13.0.0
+colorama>=0.4.6
 streamlit>=1.28.0
 
 # Graph Database - AI Assistant Memory System
