--- a/.env.sample
+++ b/.env.sample
@@ -1,66 +1,16 @@
-# IGN Scripts - Ignition Gateway Configuration
-# Copy this file to .env and configure your gateway connections
+# IGN_Scripts Environment Configuration
 
-# =============================================================================
-# GATEWAY CONFIGURATION
-# =============================================================================
+# OPC-UA Configuration
+OPCUA_SERVER_URL=opc.tcp://localhost:4840
+OPCUA_USERNAME=admin
+OPCUA_PASSWORD=your_password_here
 
-# List of gateway names (comma-separated)
-IGN_GATEWAYS=development,production,staging
+# Neo4j Configuration
+NEO4J_URI=bolt://localhost:7687
+NEO4J_USERNAME=neo4j
+NEO4J_PASSWORD=your_neo4j_password
 
-# =============================================================================
-# DEVELOPMENT GATEWAY
-# =============================================================================
-IGN_DEVELOPMENT_HOST=localhost
-IGN_DEVELOPMENT_PORT=8088
-IGN_DEVELOPMENT_HTTPS=false
-IGN_DEVELOPMENT_USERNAME=admin
-IGN_DEVELOPMENT_PASSWORD=password
-IGN_DEVELOPMENT_AUTH_TYPE=basic
-IGN_DEVELOPMENT_PROJECT=MyProject
-IGN_DEVELOPMENT_DESCRIPTION=Development gateway for testing
-IGN_DEVELOPMENT_TAGS=dev,testing,local
-IGN_DEVELOPMENT_TIMEOUT=30
-IGN_DEVELOPMENT_VERIFY_SSL=false
-
-# =============================================================================
-# PRODUCTION GATEWAY
-# =============================================================================
-IGN_PRODUCTION_HOST=prod-gateway.company.com
-IGN_PRODUCTION_PORT=8443
-IGN_PRODUCTION_HTTPS=true
-IGN_PRODUCTION_USERNAME=prod_user
-IGN_PRODUCTION_PASSWORD=secure_production_password
-IGN_PRODUCTION_AUTH_TYPE=basic
-IGN_PRODUCTION_PROJECT=ProductionApp
-IGN_PRODUCTION_DESCRIPTION=Production Ignition Gateway
-IGN_PRODUCTION_TAGS=prod,critical,monitored
-IGN_PRODUCTION_TIMEOUT=60
-IGN_PRODUCTION_VERIFY_SSL=true
-
-# =============================================================================
-# STAGING GATEWAY (with token authentication)
-# =============================================================================
-IGN_STAGING_HOST=staging-gateway.company.com
-IGN_STAGING_PORT=8088
-IGN_STAGING_HTTPS=true
-IGN_STAGING_AUTH_TYPE=token
-IGN_STAGING_TOKEN=your_api_token_here
-IGN_STAGING_PROJECT=StagingApp
-IGN_STAGING_DESCRIPTION=Staging environment for testing
-IGN_STAGING_TAGS=staging,test,pre-prod
-IGN_STAGING_TIMEOUT=45
-IGN_STAGING_VERIFY_SSL=true
-
-# =============================================================================
-# GLOBAL SETTINGS
-# =============================================================================
-
-# Default timeout for all connections (can be overridden per gateway)
-IGN_DEFAULT_TIMEOUT=30
-
-# Enable debug logging
-IGN_DEBUG=false
-
-# Log file location
-IGN_LOG_FILE=logs/ignition_gateway.log
+# Ignition Gateway
+IGNITION_GATEWAY_URL=http://localhost:8088
+IGNITION_USERNAME=admin
+IGNITION_PASSWORD=your_ignition_password
