--- a/.env.sample
+++ b/.env.sample
@@ -1,16 +1,1 @@
-# IGN_Scripts Environment Configuration
-
-# OPC-UA Configuration
-OPCUA_SERVER_URL=opc.tcp://localhost:4840
-OPCUA_USERNAME=admin
-OPCUA_PASSWORD=your_password_here
-
-# Neo4j Configuration
-NEO4J_URI=bolt://localhost:7687
-NEO4J_USERNAME=neo4j
-NEO4J_PASSWORD=your_neo4j_password
-
-# Ignition Gateway
-IGNITION_GATEWAY_URL=http://localhost:8088
-IGNITION_USERNAME=admin
-IGNITION_PASSWORD=your_ignition_password
+# IGN Scripts Environment Configuration Template
