--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,8 @@ ign-scripts = "src.core.enhanced_cli:main"
 [tool.ruff]
 target-version = "py311"
 line-length = 88
+
+[tool.ruff.lint]
 select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
@@ -93,10 +95,10 @@ ignore = [
     "D107", # Missing docstring in __init__
 ]
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "google"
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "tests/**/*" = ["D", "S101", "ARG", "FBT"]
 "scripts/**/*" = ["D", "T201"]
 
