--- a/requirements.txt
+++ b/requirements.txt
@@ -57,7 +57,7 @@ types-PyYAML>=6.0.12
 
 # New dependencies for enhanced CLI
 rich>=13.7.0
-textual>=3.3.0
+prompt_toolkit>=3.0.0
 
 # Additional visualization
 matplotlib>=3.8.2
