--- a/requirements.txt
+++ b/requirements.txt
@@ -19,13 +19,17 @@ opcua-client>=0.8.4
 numpy>=1.21.0
 
 # Development Dependencies
-ruff>=0.1.0
-mypy>=1.7.0
-pytest>=7.4.0
-pytest-asyncio>=0.21.0
-pytest-cov>=4.1.0
-black>=23.9.0
-isort>=5.12.0
+ruff==0.3.0
+mypy==1.8.0
+pytest==8.0.0
+pytest-asyncio==0.23.5
+pytest-cov==4.1.0
+pytest-mock==3.12.0
+pytest-xdist==3.5.0
+coverage==7.4.1
+black==24.1.1
+isort==5.13.2
+pre-commit==3.6.0
 
 # Pre-commit
 pre-commit>=3.5.0
@@ -38,7 +42,7 @@ ipykernel>=6.25.0
 structlog>=23.2.0
 
 # Configuration
-python-dotenv>=1.0.0
+python-dotenv==1.0.1
 pyyaml>=6.0.1
 
 # CLI & UI
@@ -52,8 +56,9 @@ neo4j>=5.14.0
 py2neo>=2021.2.4
 
 # Type stubs
-types-requests>=2.31.0
-types-PyYAML>=6.0.12
+types-requests==2.31.0.20240125
+types-python-dateutil==2.8.19.14
+types-PyYAML==6.0.12.12
 
 # New dependencies for enhanced CLI
 prompt_toolkit>=3.0.0
@@ -64,3 +69,19 @@ seaborn>=0.13.0
 
 # MCP dependencies
 docker>=7.0.0
+
+# Documentation
+mkdocs==1.5.3
+mkdocs-material==9.5.3
+mkdocstrings==0.24.0
+mkdocstrings-python==1.7.3
+
+# Testing and analysis
+robotframework==7.0.1
+robotframework-requests==0.9.5
+robotframework-seleniumlibrary==6.1.3
+
+# Utilities
+requests==2.31.0
+PyYAML==6.0.1
+python-dateutil==2.8.2
