--- a/requirements.txt
+++ b/requirements.txt
@@ -81,6 +81,16 @@ robotframework==7.0.1
 robotframework-requests==0.9.5
 robotframework-seleniumlibrary==6.1.3
 
+# Type checking
+types-requests==2.31.0.20240125
+types-python-dateutil==2.8.19.14
+types-PyYAML==6.0.12.12
+
+# Security
+bandit==1.7.7
+safety==2.3.5
+snyk==1.0.0
+
 # Utilities
 requests==2.31.0
 PyYAML==6.0.1
