--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -34,41 +34,62 @@ jobs:
         cd ${{ matrix.service }}
         uv venv
         source .venv/bin/activate
-        uv pip install -r requirements.txt
+        if [ -f requirements.txt ]; then
+          uv pip install -r requirements.txt
+        fi
+        uv pip install bandit safety
 
     - name: Run Bandit
       run: |
         cd ${{ matrix.service }}
         source .venv/bin/activate
-        bandit -r src -f json -o bandit-results.json
+        bandit -r src -f json -o bandit-results.json || true
 
     - name: Run Safety
       run: |
         cd ${{ matrix.service }}
         source .venv/bin/activate
-        safety check -r requirements.txt --json > safety-results.json
+        if [ -f requirements.txt ]; then
+          safety check -r requirements.txt --json > safety-results.json || true
+        else
+          safety check --json > safety-results.json || true
+        fi
 
-    - name: Run Snyk
-      uses: snyk/actions/python@master
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      with:
-        args: --severity-threshold=high
+    - name: Run pip-audit
+      run: |
+        cd ${{ matrix.service }}
+        source .venv/bin/activate
+        pip install pip-audit
+        if [ -f requirements.txt ]; then
+          pip-audit -r requirements.txt --format=json --output=pip-audit-results.json || true
+        else
+          pip-audit --format=json --output=pip-audit-results.json || true
+        fi
 
     - name: Upload Bandit results
-      uses: github/codeql-action/upload-sarif@v3
+      if: always()
+      uses: actions/upload-artifact@v4
       with:
-        sarif_file: ./${{ matrix.service }}/bandit-results.json
-        category: bandit
+        name: bandit-results-${{ matrix.service }}
+        path: ./${{ matrix.service }}/bandit-results.json
 
     - name: Upload Safety results
-      uses: github/codeql-action/upload-sarif@v3
+      if: always()
+      uses: actions/upload-artifact@v4
       with:
-        sarif_file: ./${{ matrix.service }}/safety-results.json
-        category: safety
+        name: safety-results-${{ matrix.service }}
+        path: ./${{ matrix.service }}/safety-results.json
+
+    - name: Upload pip-audit results
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: pip-audit-results-${{ matrix.service }}
+        path: ./${{ matrix.service }}/pip-audit-results.json
 
     - name: Check for vulnerabilities
       if: failure()
       run: |
         echo "Security vulnerabilities found. Please check the workflow logs for details."
+        echo "Review the uploaded artifacts for detailed security reports."
         exit 1 
