--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,10 @@ jobs:
         cd ${{ matrix.service }}
         uv venv
         source .venv/bin/activate
-        uv pip install -r requirements.txt
+        if [ -f requirements.txt ]; then
+          uv pip install -r requirements.txt
+        fi
+        uv pip install pytest pytest-cov
 
     - name: Run tests
       run: |
@@ -45,7 +48,7 @@ jobs:
       uses: codecov/codecov-action@v4
       with:
         file: ./${{ matrix.service }}/coverage.xml
-        fail_ci_if_error: true
+        fail_ci_if_error: false
 
   lint:
     name: Lint
@@ -73,7 +76,10 @@ jobs:
         cd ${{ matrix.service }}
         uv venv
         source .venv/bin/activate
-        uv pip install -r requirements.txt
+        if [ -f requirements.txt ]; then
+          uv pip install -r requirements.txt
+        fi
+        uv pip install ruff mypy
 
     - name: Run ruff
       run: |
@@ -113,7 +119,10 @@ jobs:
         cd ${{ matrix.service }}
         uv venv
         source .venv/bin/activate
-        uv pip install -r requirements.txt
+        if [ -f requirements.txt ]; then
+          uv pip install -r requirements.txt
+        fi
+        uv pip install mkdocs mkdocs-material
 
     - name: Build documentation
       run: |
@@ -127,7 +136,7 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./${{ matrix.service }}/site
-        publish_branch: gh-pages
+        destination_dir: ${{ matrix.service }}
 
   build-docker:
     name: Build and Push Docker Images
