--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,18 +29,41 @@ jobs:
         uv venv
         source .venv/bin/activate
         uv cache clean
-        uv pip install -r requirements.txt
-        uv pip install -e ".[dev]"
+        uv pip install pytest pytest-cov build
+        if [ -f requirements.txt ]; then
+          uv pip install -r requirements.txt
+        fi
 
     - name: Run full test suite
       run: |
         source .venv/bin/activate
         pytest tests/ --cov=src --cov-report=xml -v
 
-    - name: Build Docker image
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Build and push Docker images
       run: |
-        docker build -t ign-scripts:${{ github.ref_name }} .
-        docker build -t ign-scripts:latest .
+        # Build and push MCP service
+        cd mcp
+        docker build -t ghcr.io/reh3376/mcp:${{ github.ref_name }} .
+        docker build -t ghcr.io/reh3376/mcp:latest .
+        docker push ghcr.io/reh3376/mcp:${{ github.ref_name }}
+        docker push ghcr.io/reh3376/mcp:latest
+        
+        # Build and push MCP Tools service
+        cd ../mcp-tools
+        docker build -t ghcr.io/reh3376/mcp-tools:${{ github.ref_name }} .
+        docker build -t ghcr.io/reh3376/mcp-tools:latest .
+        docker push ghcr.io/reh3376/mcp-tools:${{ github.ref_name }}
+        docker push ghcr.io/reh3376/mcp-tools:latest
 
     - name: Build package
       run: |
