--- a/.github/workflows/verify-tokens.yml
+++ b/.github/workflows/verify-tokens.yml
@@ -4,8 +4,8 @@ on:
   workflow_dispatch:  # Allow manual triggering
 
 jobs:
-  verify-snyk:
-    name: Verify Snyk Token
+  verify-security-tools:
+    name: Verify Security Tools
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -24,13 +24,21 @@ jobs:
       run: |
         uv venv
         source .venv/bin/activate
-        uv pip install -r requirements.txt
+        uv pip install bandit safety pip-audit
+        if [ -f requirements.txt ]; then
+          uv pip install -r requirements.txt
+        fi
 
-    - name: Verify Snyk token
+    - name: Test security tools
       run: |
         source .venv/bin/activate
-        snyk auth ${{ secrets.SNYK_TOKEN }}
-        snyk test
+        echo "Testing Bandit..."
+        bandit --version
+        echo "Testing Safety..."
+        safety --version
+        echo "Testing pip-audit..."
+        pip-audit --version
+        echo "All security tools are working correctly!"
 
   verify-docker:
     name: Verify Docker Token
@@ -48,13 +56,9 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_TOKEN }}
-
     - name: Verify Docker access
       run: |
-        docker pull ghcr.io/reh3376/mcp:latest || true
-        docker pull ghcr.io/reh3376/mcp-tools:latest || true 
+        echo "Testing GitHub Container Registry access..."
+        docker pull ghcr.io/reh3376/mcp:latest || echo "MCP image not found or access denied"
+        docker pull ghcr.io/reh3376/mcp-tools:latest || echo "MCP Tools image not found or access denied"
+        echo "Docker verification completed" 
