--- a/mcp-tools/.github/workflows/ci-cd.yml
+++ b/mcp-tools/.github/workflows/ci-cd.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Upload coverage report
         uses: codecov/codecov-action@v4
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: false
 
   lint:
     runs-on: ubuntu-latest
@@ -73,7 +73,7 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Extract metadata (tags, labels) for Docker
         id: meta
