--- a/mcp-tools/pytest.ini
+++ b/mcp-tools/pytest.ini
@@ -12,18 +12,6 @@ markers =
     slow: Tests that take longer to run
     performance: Performance tests
 
-# Test configuration
-addopts = 
+# Test configuration - coverage options are optional
+addopts =
     --verbose
-    --cov=src
-    --cov-report=term-missing
-    --cov-report=html
-    --no-cov-on-fail
-
-# Environment variables for testing
-env =
-    TESTING=true
-    MCP_API_URL=http://localhost:8000
-    API_PORT=8001
-    LOG_LEVEL=DEBUG
-    DEBUG_MODE=true 
