--- a/mcp/pytest.ini
+++ b/mcp/pytest.ini
@@ -11,19 +11,6 @@ markers =
     e2e: End-to-end tests
     slow: Tests that take longer to run
 
-# Test configuration
-addopts = 
+# Test configuration - coverage options are optional
+addopts =
     --verbose
-    --cov=src
-    --cov-report=term-missing
-    --cov-report=html
-    --no-cov-on-fail
-
-# Environment variables for testing
-env =
-    TESTING=true
-    NEO4J_URI=bolt://localhost:7687
-    NEO4J_USER=neo4j
-    NEO4J_PASSWORD=test_password
-    API_PORT=8000
-    LOG_LEVEL=DEBUG 
