feat: Design easy model swapping architecture with llama3.1-python-coder
- Updated primary code analysis model to llama3.1-python-coder (Python-specialized)
- Designed modular architecture for runtime model switching
- Added automatic fallback chain: llama3.1-python-coder → codellama:13b → qwen2.5-coder:7b → codellama:7b-python
- Enhanced OpenSourceModelManager with switch_model() and auto_select_best_model() methods
- Added comprehensive CLI commands for model management (8 new commands)
- Created WebIntelligenceConfig with runtime model switching capabilities
- Added model download priority guide based on hardware configurations
- Emphasized EASY MODEL CHANGEOUT throughout architecture
- Maintained 128k token context window for large file analysis
- Ensured complete independence from proprietary AI services

Key Features:
- Runtime model switching without restart
- Automatic failover to available models
- Hardware-aware model selection
- Environment variable configuration
- CLI model management commands
- Performance benchmarking capabilities

--- a/requirements.txt
+++ b/requirements.txt
@@ -100,3 +100,7 @@ snyk==1.0.0
 requests==2.31.0
 PyYAML==6.0.1
 python-dateutil==2.8.2
+
+# Repository Analysis Dependencies
+tomli>=2.0.1  # For parsing pyproject.toml files
+gitpython>=3.1.0  # Alternative to subprocess git calls
