--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,15 +20,14 @@ repos:
         args: [--fix]
       - id: ruff-format
 
-  # Temporarily disabled for Phase 9.6 commit - AI assistant module issues need separate fix
-  # - repo: https://github.com/pre-commit/mirrors-mypy
-  #   rev: v1.16.0
-  #   hooks:
-  #     - id: mypy
-  #       additional_dependencies:
-  #         - types-requests
-  #         - types-PyYAML
-  #         - types-python-dateutil
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.16.0
+    hooks:
+      - id: mypy
+        additional_dependencies:
+          - types-requests
+          - types-PyYAML
+          - types-python-dateutil
 
   - repo: https://github.com/psf/black
     rev: 25.1.0
