feat: Complete Frontend UI Implementation with HMR
✅ Frontend Development Implementation:
- React 18 + TypeScript + Vite application setup
- Tailwind CSS v3 with CLI-inspired dark theme
- React Router for navigation with App Shell pattern
- React Query for data management
- React Hook Form with Zod validation
- Hot Module Replacement (HMR) with @vitejs/plugin-react-swc

✅ Component Implementation:
- AppShell with responsive sidebar navigation
- Complete page components for all CLI features
- Script Generator Dashboard with template selection
- Fixed TypeScript configuration errors
- Added ESLint configuration

🎯 Production Ready: Frontend foundation complete for Phase 12.1

--- a/.gitignore
+++ b/.gitignore
@@ -199,6 +199,13 @@ secrets.env
 .fuse_hidden*
 .nfs*
 
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
 # IDEs
 .idea/
 .vscode/
